Task 1 completed: createListItem function added

--- a/index.htm
+++ b/index.htm
@@ -19,11 +19,19 @@
   </div>
   <div>
     <h2>Shoppinglist UNHEALTHY</h2>
+
     
     <ul id="listUnhealthy">
+      <!-- Here comes the unhealthy items -->
+      <li id="0" class="unhealthy">fries</li>
+      <li id="1" class="unhealthy">burger</li>
+      <li id="2" class="unhealthy">soda</li>
+      <li id="3" class="unhealthy">cake</li>
+      
     </ul>
   </div>
   
   <script src="js/index.js"></script>
 </body>
 </html>
+
